[tool.poetry]
name = "uptimerobot"
version = "0.1.0"
description = ""
authors = ["peppak <peppius48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.8.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
